--- a/.classpath
+++ b/.classpath
@@ -20,5 +20,6 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Users/cbrogard2020/Downloads/mssql-jdbc-8.4.1.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/cbrogard2020/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
