--- a/.classpath
+++ b/.classpath
@@ -19,6 +19,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Users/cbrogard2020/Downloads/mssql-jdbc-8.4.1.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hanaya2020/Downloads/mssql-jdbc-8.2.2.jre8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/hanaya2020/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
